<resources>
    <string name="app_name">My Application</string>
    <string name="Intro">In the era of instant-everything,
        You should not have to spend
        an entire afternoon
        researching, calling and
        comparing local pros
        whenever you need one.
        So we set out to make it easier.</string>
    <string name="signuptext">Sign Up With</string>
    <string name="accTypetext">I am a</string>
    <string name="buyerCard">Customer</string>
    <string name="providerCard">Service Provider</string>
    <string name="descriptionImage">image</string>
    <string name="hello">Hello,</string>
    <string name="form">Please Fill This Form!</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone No</string>
    <string name="email">Email</string>
    <string name="title_activity_navbar">Navbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Appointments</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="fullname">Sample User</string>
    <string name="useremail">sample email</string>
    <string name="updateform">Please Update Your Details</string>
    <string name="exit">Are You Sure You Want To Exit?</string>
    <string name="yesbutton">Yes</string>
    <string name="nobutton">No</string>

    <string name="title_activity_provider_nav">ProviderNav</string>

    <string name="title_activity_provider__navigation">Provider_Navigation</string>
    <string name="title_activity_provider_navigation">Provider_Navigation</string>
    <string name="enterappoint">Please Select Your Appointment</string>
    <string name="dayselect">Select Date</string>
    <string name="selecttime">Input Time</string>

</resources>