<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AccountCreation"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/descriptionImage"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form"
        android:textColor="#040000"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:contentDescription="@string/descriptionImage"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="513dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/descriptionImage"
                android:src="@drawable/form" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="28dp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/name"
                android:textColor="#605C5C" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/address"
                android:textColor="#605C5C" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:phoneNumber="true"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/phone"
                android:textColor="#605C5C" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColor="#605C5C" />

            <EditText
                android:id="@+id/editTextnic"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="number"
                android:hint="NIC"
                android:textColor="#605C5C" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:shadowRadius="200"
        android:soundEffectsEnabled="true"
        android:text="@string/save"
        app:cornerRadius="20dp"
        tools:visibility="visible" />

</LinearLayout>




</ScrollView>