<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".make_appointment">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:srcCompat="@drawable/logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="570dp"
        android:layout_gravity="center"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="22dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enterappoint"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dayselect"
                android:textColor="#000000"
                android:textSize="18sp" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:text="@string/selecttime" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"
                app:cornerRadius="20dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>