<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".accType">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/descriptionImage"
        android:src="@drawable/logo" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/accTypetext"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardcus"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:soundEffectsEnabled="true"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <Space
                android:layout_width="match_parent"
                android:layout_height="17dp" />

            <ImageView
                android:id="@+id/imageView400"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:contentDescription="@string/descriptionImage"
                android:scaleType="fitCenter"
                android:src="@drawable/customer" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/buyerCard"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="31dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardprovider"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:soundEffectsEnabled="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:soundEffectsEnabled="false">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:contentDescription="@string/descriptionImage"
                android:src="@drawable/provider" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/providerCard"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>