<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/descriptionImage"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descriptionImage"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/shake" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="35dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Intro"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signuptext"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/descriptionImage"
            android:scaleType="fitCenter"
            android:soundEffectsEnabled="true"
            app:srcCompat="@drawable/google"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/descriptionImage"
            android:scaleType="fitCenter"
            android:soundEffectsEnabled="true"
            app:srcCompat="@drawable/facebook"
            android:layout_width="100dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>