<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">


    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="412dp">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="234dp"
            android:layout_height="98dp"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="2dp"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update Profile"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="100dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="53dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="450dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/cusname"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="name"
                    android:textSize="15sp"
                    tools:layout_editor_absoluteX="-3dp"
                    tools:layout_editor_absoluteY="100dp" />

                <EditText
                    android:id="@+id/cusaddress"
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/phoneno"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/phone"
                    android:textSize="15sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="-3dp"
                    tools:layout_editor_absoluteY="100dp" />

                <EditText
                    android:id="@+id/cusemail"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/email"
                    android:textSize="15sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="-3dp"
                    tools:layout_editor_absoluteY="100dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="27dp" />

                <Button
                    android:id="@+id/view"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:shadowRadius="200"
                    android:soundEffectsEnabled="true"
                    android:text="Update"
                    app:cornerRadius="20dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</RelativeLayout>